--- a/ckanext/publicamundi/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_item.html
@@ -2,15 +2,23 @@
 {% set url_action = 'resource_edit' if url_is_edit and can_edit else 'resource_read' %}
 {% set url = h.url_for(controller='package', action=url_action, id=pkg.name, resource_id=res.id) %}
 
-{% set raster_resources = h.get_ingested_raster_resources(pkg) %}
-{% set vector_resources = h.get_ingested_vector_resources(pkg) %}
+{% set raster_resources = h.get_ingested_raster_from_resource(pkg,res) %}
+{% set vector_resources = h.get_ingested_vector_from_resource(pkg,res) %}
 
+{# {% resource 'ckanext-publicamundi/download_as_options' %} #}
 <li class="resource-item clearfix" data-id="{{ res.id }}">
     {% block resource_item_header %}
     <header>
         {% block resource_item_title %}
         <a class="heading inline" href="{{ url }}" title="{{ res.name or res.description }}">
-            {{ h.resource_display_name(res)|truncate(50) }}
+            {% if res.can_be_previewed %}
+                <i class="icon-eye-open"></i>
+                {% else %}
+                <i class="icon-info-sign"></i>
+                {% endif %}
+
+            {{ h.resource_display_name(res)|truncate(50) }} 
+                
             <span class="format-label" 
                 property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ res.format }}</span>
             {{ h.popular('views', res.tracking_summary.total, min=10) }}
@@ -18,8 +26,45 @@
         {% endblock %} {# resource_item_title #}
 
         <div class="resource-action-buttons">
+        
+
+        {% block resource_item_explore %}
+        {% if not url_is_edit %}
+            {% if can_edit %}
+            <div class="action-button"><a class="btn" href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=res.id) }}">
+                      <i class="icon-edit"></i> {{ _('Edit') }}
+              </a></div>
+                {% endif %}
+            
+            {% if res.resource_type == 'file' %}
+
+            {% for raster_res in raster_resources %}
+            {% if raster_res.format == 'wms' %}
+                <a class="btn" href={{ "/maps/" + raster_res.id}} >
+                        <i class="icon-medium icon-globe"></i>{{ _(' Map')}}
+                    </a>
+            {% endif %}
+            {% endfor %}
+
+            <div class="action-button btn-group pull-right">
+                <a class="btn btn-primary resource-url-analytics" href="{{ res.url }}"
+                    ><i class="icon-download"></i> {{ _('Download') }}</a>
+                {% if raster_resources|length>0 or vector_resources|length>0 %}
+                <a class="btn btn-primary dropdown-toggle" data-toggle="modal" data-target="#download_options-{{res.id}}" data-module="download_options_dialog" >
+                    <span class="icon-reorder"></span>
+                </a>
+                {% snippet 'package/snippets/download_options.html', pkg=pkg, res=res %}
+                <ul class="dropdown-menu">
+                    {% block resource_item_download_links %}
+                    {# Placeholder for vector/raster storers to fill in download links #}
+                    {% endblock %}
+                </ul>
+                {% endif %}
+            </div>
+            
+
+
         {% block resource_item_download %}
-        {% if res.resource_type == 'file' %} 
         {% if raster_resources|length>0 or vector_resources|length>0 %}
         {# <div class="btn-group">
                 <a class="btn" href="{{ res.url }}" class="btn resource-url-analytics" target="_blank">
@@ -27,65 +72,25 @@
                 <button class="btn dropdown-toggle" data-toggle="dropdown">
                     <span class="caret"></span>
                 </button> #}
-                <div class="btn-group dropdown dropdown-toggle download-toggle">
-                    <a href="#" class="btn dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-download"> </i>{{ _('Download as') }} <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    {% block resource_item_download_links %}
-                    {# Placeholder for vector/raster storers to fill in download links #}
-                    {% endblock %}
-                </ul>
-            </div>
+                {# <a href="#" class="btn resource-url-analytics" data-module="download_as_popup" target="_blank">
+                    <i class="icon-download"> </i>{{ _('Download as') }}</a> #}
     
-        {% endif %}
         {% endif %}
         {% endblock %}
 
 
-        {% block resource_item_explore %}
-        {% if not url_is_edit %}
-        <div class="dropdown btn-group resource-explore-opts pull-right">
-            <a href="#" class="btn dropdown-toggle" data-toggle="dropdown">
-              <i class="icon-compass"></i> {{ _('Options') }} <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                {% block resource_item_explore_links %}
-                <li>
-                    <a href="{{ url }}">
-                      {% if res.can_be_previewed %}
-                        <i class="icon-eye-open"></i> {{ _('Preview') }}
-                      {% else %}
-                        <i class="icon-info-sign"></i> {{ _('More information') }}
-                      {% endif %}
-                    </a>
-                </li>
-                <li>
-                        {% if res.resource_type == 'api' %}
-                            <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
-                                <i class="icon-beaker"></i>
-                                    {{ _('Endpoint') }}
-                            </a>
-                            {% else %}
-                            {% if res.can_be_previewed  %}
-                                    <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
-                                        <i class="icon-download"></i> {{ _('Download') }}</a>
-                            {% else %}
-                            <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
-                            <i class="icon-external-link"></i> {{ _('Go to resource') }}
-                            </a>
-                            {% endif %}
-                        {% endif %}
-                </li>
-                {% if can_edit %}
-                <li>
-                    <a href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=res.id) }}">
-                      <i class="icon-edit"></i> {{ _('Edit') }}
-                    </a>
-                </li>
-                {% endif %}
-                {% endblock %} {# resource_item_explore_links #}
-            </ul>
-        </div>
+        {% elif res.resource_type == 'api' %}
+            <div class="action-button">            
+                <a href="{{ res.url }}" class="btn resource-url-analytics" target="_blank">
+                                    <i class="icon-beaker"></i>
+                                        {{ _('Endpoint') }}
+                                    </a>
+            </div>
+
+        {% endif %}
+                
         {% endif %} {# url_is_edit #}
+
         {% endblock %} {# resource_item_explore #}
         </div> {# resource-action-buttons #}
         
@@ -103,12 +108,5 @@
     </p>
     {% endblock %} {# resource_item_description #}
 
-    </li>
 
-
-    {# {% if res.resource_type == 'api' %}
-        <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
-            <div class="btn"> <i class="icon-beaker"></i>
-                {{ _('Endpoint') }}</div>
-        </a> #}
-
+    
