fixed some issues and added debug info

--- a/ckanext/publicamundi/storers/raster/templates/package/snippets/download_options.html
+++ b/ckanext/publicamundi/storers/raster/templates/package/snippets/download_options.html
@@ -2,13 +2,41 @@
 {# {% extends "package/snippets/download_options.html" %} #}
 
 {% set raster_resources = h.get_ingested_raster_from_resource(pkg,res) %}
+{% set available_formats = [
+            {'name':'csv', 
+             'title': 'CSV',
+             },
+            {'name':'jpeg', 
+             'title': 'JPEG',
+             },
+            {'name':'jpeg2000', 
+             'title': 'JPEG2000',
+             },
+            {'name':'netcdf', 
+             'title': 'NetCDF',
+             },
+            {'name':'png', 
+             'title': 'PNG',
+             },
+            {'name':'tiff', 
+             'title': 'TIFF',
+             }]
+             %}
 
 {% block download_options_items %}
 {{ super() }}
 {# <option data-resource-type="raster" data-resource-id="Cov_a78360bb_16ac_490b_9266_de29a9b935b7" data-resource-format="csv" >RASTER</option>
 <option data-resource-type="raster" data-resource-id="coverageid2" data-resource-format="xsd">{{ raster_resources }}</option> #}
     {% for raster_res in raster_resources %}
-        {% snippet 'package/snippets/resource_item_raster.html', res=raster_res %} 
+    
+        {% if raster_res.rasterstorer_resource and raster_res.format in ['wcs'] %}
+            {% if raster_res.format == 'wcs' %}
+                {% for format in availabel_formats %}
+                <option value="{{format.name}}" data-resource-type="raster" data-resource-id="{{raster_res.wcs_coverage}}" data-resource-format="{{format.name}}" href="#" target="_blank">{{format.title}}
+                </option>
+                {% endfor %}
+            {% endif %} {# res.format #}
+        {% endif %}
     {% endfor %}
 {% endblock %}
 
