--- a/ckanext/publicamundi/storers/raster/templates/package/snippets/resource_item_raster.html
+++ b/ckanext/publicamundi/storers/raster/templates/package/snippets/resource_item_raster.html
@@ -26,5 +26,5 @@
         </option>
         {% endfor %}
         {% endif %} {# res.format #}
-{% resource 'ckanext-publicamundi-raster/raster_export' %}
+        {# {% resource 'ckanext-publicamundi-raster/raster_export' %} #}
 {% endif %}
