--- a/ckanext/publicamundi/storers/vector/templates/package/snippets/download_options.html
+++ b/ckanext/publicamundi/storers/vector/templates/package/snippets/download_options.html
@@ -11,7 +11,7 @@
         {% if vector_res.vectorstorer_resource and vector_res.format in ['wfs'] %}
         {% if vector_res.format == 'wfs' %}
             {% for fmt in h.vectorstorer_wfs_output_formats() %}
-            <option value="{{fmt}}" data-wfs_server="{{vector_res.wfs_server}}" data-wfs_layer="{{vector_res.wfs_layer}}" data-fmt_name="{{fmt.name}}">
+            <option value="{{fmt.name}}" data-wfs_server="{{vector_res.wfs_server}}" data-wfs_layer="{{vector_res.wfs_layer}}" data-fmt_name="{{fmt.name}}">
                {{ fmt.display_name|safe }}
             </option>
             {% endfor %}
