--- a/ckanext/publicamundi/storers/vector/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/storers/vector/templates/package/snippets/resource_item.html
@@ -2,7 +2,7 @@
 
 {% set vector_resources = h.get_ingested_vector_from_resource(pkg,res) %}
 
-{% block resource_item_explore_links %}
+{% block resource_item_explore %}
     {% if res.vectorstorer_resource and res.format == 'wfs' %}
     {# In case of a WFS resource, we also provide a tabular preview #}
     {% with tab_res = h.vectorstorer_table_resource(pkg, res) %}
