Fix syntax error in jinja2 template

--- a/ckanext/publicamundi/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_item.html
@@ -55,11 +55,13 @@
                     <span class="icon-reorder"></span>
                 </a>
                 {% snippet 'package/snippets/download_options.html', pkg=pkg, res=res %}
-                {#  <ul class="dropdown-menu">
+                <!--
+                <ul class="dropdown-menu">
                     {% block resource_item_download_links %}
                     {# Placeholder for vector/raster storers to fill in download links #}
                     {% endblock %}
-                </ul> #}
+                </ul>
+                -->
                 {% endif %}
             </div>
 
