fixed select2 not showing selected bug

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -35,9 +35,11 @@ header > h6.inline {
 .modal {
     border-radius: 2px;
 }
-
+.select2-chosen{
+    font-size: 15px;
+}
 .modal .modal-header h3 {
-    font-size: 1.5em;
+    //font-size: 18px;
 }
 
 .btn-small {
