--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
@@ -30,7 +30,7 @@
   {% if sorting %}
       <div class="form-select control-group control-order-by">
         <label for="field-order-by">{{ _('Order by') }}</label>
-        <select id="field-order-by" class="select-style" name="sort">
+        <select id="field-order-by" class="select-style" name="sort" data-module="input-select2">
           {% for label, value in sorting %}
             {% if label and value %}
               <option value="{{ value }}"{% if sorting_selected == value %} selected="selected"{% endif %}>{{ label }}</option>
