added hide class to modal

--- a/ckanext/publicamundi/templates/package/snippets/download_options.html
+++ b/ckanext/publicamundi/templates/package/snippets/download_options.html
@@ -15,7 +15,7 @@
 
 {% resource 'ckanext-publicamundi/download_options' %}
 
-<div class="modal no-fade" id="download_options-{{res.id}}" tabindex="-1" aria-hidden="true" > 
+<div class="modal hide no-fade" id="download_options-{{res.id}}" tabindex="-1" aria-hidden="true" > 
     {% block download_options_header %}
     <div class="modal-header">
         <a class="close" data-dismiss="modal">&times;</a>
