--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -106,18 +106,7 @@
             <nav class="section navigation">
           <ul class="nav nav-pills">
               {% block header_site_navigation_tabs %}
-              {{ h.build_nav_main(
-                ('search', _('Datasets')),
-                ('group_index', _('Topics')),
-                ('organizations_index', _('Organizations')),
-                ('maps', _('Maps')),
-                ('developers', _(' API')),
-                ('news', _('News')),
-                ('about', _('About'))
-                ) }}
-                            
-            </div>
-            </div>
+                {% snippet 'snippets/main_menu.html' %}                            
             {% endblock %}
           </ul>
           </nav>
